--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive
-  Google Map to your resume!
+  Google Map to your resume! src="http://maps.googleapis.com/maps/api/js?libraries=places"
   -->
-  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
+  <script type="text/javascript" 
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVveowlrSh7QnTU5irJAUYP7BficNMNXE&signed_in=true&callback=initMap"></script>
 
   <meta name="viewport" content="width=device-width">
 </head>
